--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mariacrespo</title>
+    <title>Maria Crespo - Software Developer</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="author" content="Maria Crespo">
+    <meta name="description" content="I'm Maria Crespo, a software developer / industrial engineer / creative and innovative.">
+    <meta name="keywords" content="Maria Crespo, About Me, software developer, Backend developer, Startup, Interactive CV, Resume, CV, ARVR, HRMatches, Ruby on Rails, RoR, Ruby, MySQL, OOP">
+    <meta name="robots" content="index, follow">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <%= favicon_link_tag asset_path('favicon.ico') %>
   </head>
 
   <body>
