--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="portrait">
+  <img src="<%= asset_path 'mariacrespo.svg' %>" alt="maria" class="img-fluid w-100">
+  <a href=“add link here” alt=“welcome”>welcome</a>
+</div>
